--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-body {
-  font-family: 'Helvetica';
-}
 h1,
 h2,
 h3 {
@@ -20,39 +17,28 @@ a {
 }
 .row {
   display: flex;
-  flex-flow: row wrap;
   justify-content: space-between;
-  align-items: center;
-  align-content: center;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
-.product {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem;
-  margin: 0.5rem;
-  
-}
-
 .row.center {
   align-items: center;
 }
 .col-1 {
-  flex: 1;
   display: flex;
-  direction: column;
+  flex-direction: column;
+  flex-wrap: wrap;
+  flex: 1;
 }
 .col-2 {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   flex: 2;
-  direction: column;
-  align-items: flex-start;
 }
 .block {
-  background-color: #e0e0e0;
-  display: flex;
-  direction: row;
-  padding: 0.25rem;
+  background-color: white;
+  padding: 1rem;
   margin: 0.5rem;
   border-radius: 0.5rem;
 }
@@ -85,4 +71,10 @@ button.badge {
   border: none;
   color: #ffffff;
   width: 1.5rem;
+}
+.MuiCard-root.same-height {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
